# medimeta-pytorch

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: cross_domain_maml.py  cross_domain_pretraining.py  fully_supervised.py  imagenet-pretrained.py  imagenet_pretrained.py
medimeta/: __init__.py  batches.py  logger.py  medimeta.py  task_presampling.py  tasks.py
mimeta/: __init__.py  batches.py  logger.py  mimeta.py  task_presampling.py  tasks.py
